# weaver

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: extra_model_paths.template.yaml
examples/three_mask_workflow/: README.md
examples/three_mask_workflow/gaps/: prompts.jsonl
examples/three_mask_workflow/hurdle_one/: prompts.jsonl
examples/three_mask_workflow/ramps/: prompts.jsonl
examples/three_mask_workflow/stairs_v2/: prompts.jsonl
examples/three_mask_workflow/stairs_v3/: prompts.jsonl
weaver/: __init__.py  render_node.py
weaver/json/: three_mask_workflow.json
weaver/scripts/: demo_three_mask_workflow.py
weaver/workflows/: three_mask_workflow.py
